<resources>
    <string name="app_name">Hi School</string>
    <string name="password">Kata Sandi</string>
    <string name="name">Nama</string>
    <string name="login">Login</string>
    <string name="doesnt_have_account">Belum punya akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="kantin_name">Nama Kantin</string>
    <string name="description_placeholder">Deskripsi kantin, seperti menu menu</string>
    <string name="search_food_hint">Mau makan apa hari ini...</string>
    <string name="lipsum_news">Telah terjadi kehilangan barang berupa kontak sepeda motor</string>
    <string name="email">Email</string>
    <string name="loading">Loading...</string>
    <string name="report_submit_alert_message">Yakin ingin melaporkan ini? Laporan ini tidak dapat kamu hapus.</string>
    <string name="error_report_emtpy_description">Harap masukan deskripsi laporan!</string>
    <string name="report_successfully_sended_message">Laporan berhasil terkirim...</string>
    <string name="order_completed">Pesanan telah selesai diantarkan, selamat menikmati...</string>
    <string name="order_ordering">Yeay.. makananmu sedang dibeli...</string>
    <string name="searching_sender">Mencari pengantar...</string>
    <string name="order_sending">Makananmu akan segera datang, siapkan uangmu...</string>
</resources>
